module(
    name = "best_line_project",
    version = "1.0",
)

# Define the dependency on GoogleTest
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "abseil-cpp", version = "20230802.1")
bazel_dep(name = "google_benchmark", version = "1.8.3")

# NOTE: needs --enable_bzlmod flag   ex. bazelisk build --enable_bzlmod //:best_line_test