cc_library(
    name = "best_line",
    srcs = ["best_line.cpp"],
    hdrs = ["best_line.h"],
    copts = ["/std:c++20"],
    deps = ["@abseil-cpp//absl/container:flat_hash_map"],
)

cc_test(
    name = "best_line_test",
    srcs = ["best_line_test.cpp"],
    copts = ["/std:c++20"],
    deps = [
        ":best_line",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "best_line_benchmark",
    srcs = ["best_line_benchmark.cpp"],
    deps = [
        ":best_line",
        "@google_benchmark//:benchmark",
    ],
)
