cc_library(
    name = "circus_tower",
    srcs = ["circus_tower.cpp"],
    hdrs = ["circus_tower.h"],
    copts = ["/std:c++20"],
)

cc_library(
    name = "utils",
    srcs = ["utils.cpp"],
    hdrs = ["utils.h"],
    copts = ["/std:c++20"],
    deps = [":circus_tower"],
)

cc_test(
    name = "circus_tower_test",
    srcs = ["circus_tower_test.cpp"],
    copts = ["/std:c++20"],
    deps = [
        ":circus_tower",
        ":utils",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "circus_tower_benchmark",
    srcs = ["circus_tower_benchmark.cpp"],
    deps = [
        ":circus_tower",
        ":utils",
        "@google_benchmark//:benchmark",
    ],
)
