cc_library(
    name = "shortest_superseq",
    srcs = ["shortest_superseq.cpp"],
    hdrs = ["shortest_superseq.h"],
    deps = ["@abseil-cpp//absl/container:flat_hash_set"],
    copts = ["/std:c++20"],
)

cc_test(
    name = "shortest_superseq_test",
    srcs = ["shortest_superseq_test.cpp"],
    deps = [":shortest_superseq","@googletest//:gtest_main"],
    copts = ["/std:c++20"],
)

cc_binary(
    name = "shortest_superseq_benchmark",
    srcs = ["shortest_superseq_benchmark.cpp"],
    deps = [
        ":shortest_superseq",
        "@google_benchmark//:benchmark"
    ],
)